[ui] fixed too narrow drop down menu.
git-svn-id: https://elateportal.svn.sourceforge.net/svnroot/elateportal/trunk@1204 49e4f31f-544f-0410-8404-dcdff4eb5335

--- a/examServer/src/main/webapp/styles/simplicity/nav-horizontal.css
+++ b/examServer/src/main/webapp/styles/simplicity/nav-horizontal.css
@@ -132,7 +132,7 @@
                         border-right: 1px solid silver;
                     }
 
-                        ul#primary-nav li ul li a { padding: 3px 5px; text-align: left; width: 119px } /* Sub Menu Styles */
+                        ul#primary-nav li ul li a { padding: 3px 5px; text-align: left; width: 165px } /* Sub Menu Styles */
 
                         ul#primary-nav li:hover ul ul,
                         ul#primary-nav li:hover ul ul ul,
